# chain-bot

./: Cargo.toml
migrations/2021-01-14-024531_create_users/: up.sql
migrations/2021-01-18-060649_create_guilds/: down.sql  up.sql
migrations/2021-04-07-140252_guild_scores/: down.sql  up.sql
src/: commands.rs  interactions.rs  main.rs
src/bot/: guild_settings.rs  mod.rs
src/bot/commands/: mod.rs  settings.rs  stats.rs  top.rs
src/chain/: chains.rs  mod.rs  points.rs  styles.rs
src/database/: database.rs  mod.rs  schema.rs
src/database/tables/: guilds.rs  leaderboards.rs  mod.rs  users.rs
